Fixed high priority PMD warnings for boolean instantiation.